# damm-v2

./: CHANGELOG.md  Cargo.toml
libs/derive-variant-count/: Cargo.toml
libs/derive-variant-count/src/: lib.rs
programs/cp-amm/: Cargo.toml
programs/cp-amm/src/: constants.rs  error.rs  event.rs  lib.rs
programs/cp-amm/src/instructions/: ix_add_liquidity.rs  ix_claim_position_fee.rs  ix_claim_reward.rs  ix_lock_inner_position.rs  ix_lock_position.rs  ix_permanent_lock_position.rs  ix_remove_liquidity.rs  ix_split_position2.rs  ix_update_delegate_permission.rs  ix_withdraw_dead_liquidity_reward.rs  mod.rs
programs/cp-amm/src/instructions/admin/: ix_create_operator_account.rs
programs/cp-amm/src/instructions/operator/: ix_zap_protocol_fee.rs
programs/cp-amm/src/state/: operator.rs  pool.rs  position.rs
programs/cp-amm/src/tests/: mod.rs  test_operator_permission.rs  test_position_delegate_permission.rs
programs/cp-amm/src/utils/: token.rs
rust-sdk/: Cargo.toml
tests/: claimProtocolFee2.test.ts  deadLiquidityReward.test.ts  delegatePosition.test.ts
tests/helpers/: constants.ts  cpAmm.ts  token.ts
