[package]
name = "rust-sdk"
version = "0.2.2"
edition = "2021"
description = "cp-amm sdk"

[dependencies]
anyhow = { workspace = true }
cp-amm = { path = "../programs/cp-amm", features=["no-entrypoint", "no-custom-entrypoint"] }
ruint = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
bytemuck = { workspace = true}
proptest = { workspace = true}
