[package]
name = "cp-amm"
version = "0.2.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cp_amm"

[features]
no-custom-entrypoint = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "no-custom-entrypoint"]
default = ["no-entrypoint"]
local = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
anchor-spl = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
static_assertions = { workspace = true }
ruint = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
num = { workspace = true }
spl-token-metadata-interface = { workspace = true }
solana-instruction = { workspace = true }
borsh = { workspace = true }
const-crypto = { workspace = true }
pinocchio = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-token-2022 = { workspace = true }
protocol-zap = { workspace = true }
derive-variant-count = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
